Work on stylings, finish home page
Did more work on styling the pages, was able to get several templates to a stopping point. Might go back and add more content but this is good for
the current prototype.

Finished the following partials and pages:
- header, closes #4
- footer, closes #5
- nav bar, closes #10
- home page, closes #9

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,17 @@
 <body>
     <div class="banner">
         <img src="/img/bunnyPaint.svg" alt="">
-        <h1>Easel Share</h1>
+        <h1>Learn, <br>Paint <br>and <br>Share!</h1>
+    </div>
+    <div class="row">
+        <hr>
+        <hr>
+        <hr>
     </div>
 
+
     <div class="banner two">
-        <h2>Learn, Paint and Share!</h2>
+        <h2>An online platform to host your art classes!</h2>
     </div>
 </body>
 <%- include('partials/footer') %>
