--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,49 +5,145 @@
     --blue:#6B83FF;
     --red:#FF6B7D;
     --yellow:#F3FF6B;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.2rem;
+    --logoFont:'Lobster';
 }
 body{
     margin:0;
 }
 h1{
+    font-size:4rem;
+}
+h2{
     font-size: 3rem;
+}
+hr{
+    margin: 7rem auto;
+    border: 4px solid var(--lightGreen);
 }
 .row{
     display: flex;
     flex-direction: row;
 }
 
+.logo a{
+    margin: 1rem;
+    font-size: 1.3rem;
+    color:var(--teal);
+    text-decoration: none;
+    font-family: var(--logoFont);
+}
+
 nav{
     position: fixed;
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 70%;
     right: 0;
     top: 0;
     background-color: var(--teal);
     border-radius: 0rem 0rem 0rem 3rem;
 }
-nav .logo{
+.logo{
     position: fixed;
-    left: 0;
-    top: 0;
+    left: 1rem;
+    top: 1rem;
 }
 
 nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    text-decoration: none;
+    list-style: none;
+    
 }
+
 nav ul li{
     margin: 1rem;
+}
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 1rem;
+    border-radius: 3rem;
+    transition-property: all;
+    transition-duration: 0.2s;
+
+}
+
+nav ul li a:hover {
+    background-color: var(--lightGreen);
+    color: var(--darkTeal);
+    padding: 1rem;
 }
 
 .navButton{
     position:fixed;
-    display: none;
+    top: 1rem;
+    right: 1rem;
+
+    background-color: var(--teal);
+    color: white;
+    border: 0.5rem solid transparent;
+    border-radius: 3rem;
+    font-size: 1rem;
+    width: 4rem;
+    height: 4rem;
+    transition-property: all;
+    transition-duration: 0.2s;
+}
+
+.navButton:hover{
+    border: 0.5rem solid var(--darkTeal)
+}
+
+nav .profileIcon{
+    background-color: white;
+    border-radius: 5rem;
+    width: 4rem;
+    height: 4rem;
+    margin: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 0.3rem solid transparent;
+    transition-property: all;
+    transition-duration: 0.2s;
+
+}
+
+nav .profileIcon:hover{
+    border: 0.3rem solid var(--lightGreen)
+
+}
+
+nav .profileIcon img{
+   width: 70%;
+   
+}
+
+/* buttons */
+nav .close button{
+    background-color: transparent;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 3rem;
+    color: white;
+    font-size: 2rem;
+    border: 0.3rem solid white;
+    margin: 1rem;
+    transition-property: all;
+    transition-duration: 0.2s;
+}
+
+nav .close button:hover{
+    background-color: white;
+    color: var(--teal)
+
 }
 
 /* index */
@@ -59,12 +155,58 @@ nav ul li{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    text-transform: uppercase;
+    box-shadow: inset 0 -8rem 0 white;
 }
 
 .banner img{
-    height: 80vh;
+    height: 90vh;
 }
 
+.banner h1{
+    text-align: right;
+}
+
+.banner.two {
+    height: 70vh;
+    background-color: white;
+}
+
+.banner.two h2 {
+    margin: 6rem;
+}
+
+/* Profile page */
+.user-profile{
+    height: 8rem;
+    width: 8rem;
+    background-color: white;
+
+    background-color: white;
+    border-radius: 5rem;
+    margin: -4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 0.3rem solid var(--lightGreen);
+    transition-property: all;
+    transition-duration: 0.2s;
+}
+
+.user-profile img{
+    width: 50%;
+    margin: 0;
+}
+
+.bannerUser{
+    background-color: var(--lightGreen);
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    height: 70vh;
+    margin-bottom: 3rem;
+}
 
 /* canvas */
 .easel{
@@ -76,4 +218,33 @@ canvas{
     width: 500px;
     height: 500px;
     background-color: white;
+}
+
+/* footer */
+
+footer{
+    width: 100%;
+    align-items: space-between;
+    justify-content: space-around;
+}
+
+footer ul {
+    list-style: none;
+}
+
+footer ul li a{
+    margin: 0 1rem;
+    text-decoration: none;
+    color: var(--darkTeal);
+    transition-property: all;
+    transition-duration: 0.2s;
+}
+
+
+footer ul li a:hover{
+    color:var(--teal);
+    text-decoration: underline;
+}
+
+footer p {
 }
