--- a/views/user-page.ejs
+++ b/views/user-page.ejs
@@ -3,11 +3,12 @@
 <body>
     
 
-<div class="user-banner">
-    <div clas="user-profile">
-        <img src="" alt="user profile picture">
+<div class="bannerUser">
+    <div class="user-profile">
+        <img src="/img/profilePic.svg" alt="user profile picture">
     </div>
 </div>
+<h2 style="text-align:center; margin-top: 5rem">MJ WHO</h2>
 
 <div class="user-gallery">
 
