--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -211,14 +211,126 @@ nav .close button:hover{
 /* canvas */
 .easel{
     background-color: var(--darkTeal);
-    align-items: flex-start;
+    align-items: center;
     height: 100vh;
 }
 canvas{
-    width: 500px;
+    width: 800px;
     height: 500px;
     background-color: white;
 }
+
+.side-menu{
+    background-color: var(--teal);
+    height: 100vh;
+    margin-right: 5rem;
+}
+
+.side-menu .col{
+    align-items: space-between;
+    justify-content: space-between;
+}
+
+.return{
+    margin: 0.3rem;
+    padding: 1rem;
+    border-radius: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.return button{
+    background-color: white;
+    border:none;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 0.3rem;
+    margin: 0.3rem;
+    font-size: 1rem;
+}
+
+.return button:hover{
+    background-color: var(--lightGreen);
+}
+.tool-box{
+    background-color: white;
+    margin: 0.3rem;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.tool-box button{
+    width: 2rem;
+    height: 2rem;
+    background-color: transparent;
+    border: none;
+
+}
+
+.tool-box .colors{
+    margin: 0.3rem;
+}
+.tool-box button{
+    border-radius: 0.2rem;   
+   
+}
+.tool-box button.red{
+    background-color: var(--red);
+}
+
+.tool-box button.yellow{
+    background-color: var(--yellow);
+}
+
+.tool-box button.blue{
+    background-color: var(--blue);
+}
+.tool-box button.black{
+    background-color: #000;
+}
+
+
+.tool-box .sizes{
+    margin: 0.3rem;
+}
+
+
+
+.tool-box .sizes button{
+    
+}
+.tool-box .sizes button.small{
+    box-shadow: inset 0 -0.3rem black;
+    
+}
+.tool-box .sizes button.medium{
+    box-shadow: inset 0 -0.6rem black;
+    
+}
+.tool-box .sizes button.big{
+    box-shadow: inset 0 -1rem black;
+    
+}
+.tool-box .sizes button.huge{
+    box-shadow: inset 0 -1.3rem black;
+    
+}
+
+.tool-box .eraser .erase{
+    background-color: rgb(202, 157, 173);
+    box-shadow: inset 0 -1.3rem rgb(255, 165, 197);
+}
+
+.tool-box .eraser .erase-all{
+    background-color: transparent;
+    background-image: url("../img/new.svg");
+}
+
+.tool-box button:hover{
+    border: 0.2rem solid var(--lightGreen);
+}
+
+
 
 /* footer */
 
