Fix size for div with 404 message

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/header') %>
 <%- include('partials/nav') %>
-<div class="not-found">
+
+<div class="banner">
 <h1>Uh oh! Page not found!!</h1>
 </div>
 
