--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<button id="navbutton"class="navButton" onclick="openMenu()">menu</button>
+<button id="navbutton"class="navButton" onclick="openMenu()" aria-label="open menu">menu</button>
 <div class="logo">
     <a href="/">   
         Easel Share     
@@ -7,7 +7,7 @@
 <nav id="nav"> 
 
     <div class="close">
-        <button onclick="closeMenu()">X</button>
+        <button onclick="closeMenu()" aria-label="close menu">X</button>
     </div>
     <ul>
         <li><a href="/learning">Learn</a></li>
