Work on cursor position on my easel page

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
         <button onclick="closeMenu()" aria-label="close menu">X</button>
     </div>
     <ul>
-        <li><a href="/learning">Learn</a></li>
+        <li><a href="/learning">Learning</a></li>
         <li><a href="/art-shows">Art Shows</a></li>
         <li><a href="/easel">My Easel</a></li>
     </ul>
