--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="row">
     <ul class="row">
         <li><a href="/">Home</a></li>
-        <li><a href="/learning">Learn</a></li>
+        <li><a href="/learning">Learning</a></li>
         <li><a href="/art-shows">Art Shows</a></li>
         <li><a href="/easel">My Easel</a></li>
         <li><a href="/user-page">My Profile</a></li>
